Add some translations

--- a/l10n/po/ja_JP/_guides/amqp-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp-dev-services.adoc.po
@@ -85,7 +85,7 @@ msgstr "複数の（共有）ブローカーが必要な場合は、 `quarkus.am
 #. type: Plain text
 #: upstream/_guides/amqp-dev-services.adoc:39
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.amqp.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.amqp.devservices.shared=false` で共有を無効にすることが出来ます。"
+msgstr "共有は、開発モードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.amqp.devservices.shared=false` で共有を無効にすることが出来ます。"
 
 #. type: Title ==
 #: upstream/_guides/amqp-dev-services.adoc:40
