--- a/l10n/po/ja_JP/_guides/cache.adoc.po
+++ b/l10n/po/ja_JP/_guides/cache.adoc.po
@@ -349,7 +349,7 @@ msgstr "完了です!うまくいっているか確認してみましょう"
 #: upstream/_guides/cache.adoc:184
 #, fuzzy
 msgid "First, run the application using dev mode from the project directory:"
-msgstr "まず、プロジェクトディレクトリからdevモードでアプリケーションを実行します。"
+msgstr "まず、プロジェクトディレクトリから開発モードでアプリケーションを実行します。"
 
 #. type: Plain text
 #: upstream/_guides/cache.adoc:189
