--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -932,7 +932,7 @@ msgstr "Reactive REST APIのテスト"
 #: upstream/_guides/cassandra.adoc:526
 #, fuzzy
 msgid "Run the application in dev mode as explained above, then you can use curl commands to interact with the underlying REST API."
-msgstr "上記のようにアプリケーションをdevモードで実行すると、curlコマンドを使って基礎となるREST APIを操作できるようになります。"
+msgstr "上記のようにアプリケーションを開発モードで実行すると、curlコマンドを使って基礎となるREST APIを操作できるようになります。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:528
@@ -1017,7 +1017,7 @@ msgstr "ヘルスチェックが利用できると、アプリケーションの
 #: upstream/_guides/cassandra.adoc:576
 #, fuzzy
 msgid "Running in dev mode with `mvn clean quarkus:dev`, if you point your browser to http://localhost:8080/health/ready you should see an output similar to the following one:"
-msgstr "devモードで `mvn clean quarkus:dev` を起動し、ブラウザで http://localhost:8080/health/ready を表示すると、次のような出力が表示されます。"
+msgstr "開発モードで `mvn clean quarkus:dev` を起動し、ブラウザで http://localhost:8080/health/ready を表示すると、次のような出力が表示されます。"
 
 #. type: delimited block -
 #: upstream/_guides/cassandra.adoc:595
