--- a/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
+++ b/l10n/po/ja_JP/_guides/continuous-testing.adoc.po
@@ -228,7 +228,7 @@ msgstr "[o] - Toggle test output"
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:130
 msgid "By default test output is filtered and not displayed on the console, so that test output and dev mode output is not interleaved. Enabling test output will print output to the console when tests are run. Even when output is disabled the filtered output is saved and can be viewed in the Dev UI."
-msgstr "デフォルトでは、テスト出力はフィルタリングされ、コンソールには表示されないので、テスト出力とdevモードの出力が混在することはありません。テスト出力を有効にすると、テストが実行されたときに出力がコンソールに表示されます。出力を無効にした場合でも、フィルタリングされた出力は保存され、開発UIで見ることができます。"
+msgstr "デフォルトでは、テスト出力はフィルタリングされ、コンソールには表示されないので、テスト出力と開発モードの出力が混在することはありません。テスト出力を有効にすると、テストが実行されたときに出力がコンソールに表示されます。出力を無効にした場合でも、フィルタリングされた出力は保存され、開発UIで見ることができます。"
 
 #. type: Labeled list
 #: upstream/_guides/continuous-testing.adoc:131
@@ -272,12 +272,12 @@ msgstr "開発モードを使わない継続的なテスト"
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:148
 msgid "It is possible to run continuous testing without starting dev mode. This can be useful if dev mode will interfere with your tests (e.g. running wiremock on the same port), or if you only want to develop using tests. To start continuous testing mode run `mvn quarkus:test`."
-msgstr "devモードを起動せずに、継続的なテストを行うことができます。これは、開発モードがテストの妨げになる場合 (同じポートで wiremock を実行している場合など) や、テストだけを使って開発したい場合などに便利です。継続的テストモードを開始するには、 `mvn quarkus:test` を実行します。"
+msgstr "開発モードを起動せずに、継続的なテストを行うことができます。これは、開発モードがテストの妨げになる場合 (同じポートで wiremock を実行している場合など) や、テストだけを使って開発したい場合などに便利です。継続的テストモードを開始するには、 `mvn quarkus:test` を実行します。"
 
 #. type: Plain text
 #: upstream/_guides/continuous-testing.adoc:150
 msgid "The Dev UI is not available when running in continuous testing mode, as this is provided by dev mode."
-msgstr "Dev UIはdevモードで提供されているため、継続的テストモードで実行している場合は利用できません。"
+msgstr "Dev UIは開発モードで提供されているため、継続的テストモードで実行している場合は利用できません。"
 
 #. type: Title ==
 #: upstream/_guides/continuous-testing.adoc:151
