--- a/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
+++ b/l10n/po/ja_JP/_guides/dev-mode-differences.adoc.po
@@ -215,7 +215,7 @@ msgstr "gRPC"
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:80
 msgid "The gRPC Reflection Service is enabled in dev mode by default. That lets you use tools such as `grpcurl`. In production mode, the reflection service is disabled. You can enable it explicitly using `quarkus.grpc-server.enable-reflection-service=true`."
-msgstr "gRPC Reflection Serviceは、devモードではデフォルトで有効になっています。これにより、 `grpcurl` のようなツールを使用することができます。本番モードでは、リフレクションサービスは無効になっています。 `quarkus.grpc-server.enable-reflection-service=true` を使って明示的に有効にすることができます。"
+msgstr "gRPC Reflection Serviceは、開発モードではデフォルトで有効になっています。これにより、 `grpcurl` のようなツールを使用することができます。本番モードでは、リフレクションサービスは無効になっています。 `quarkus.grpc-server.enable-reflection-service=true` を使って明示的に有効にすることができます。"
 
 #. type: Plain text
 #: upstream/_guides/dev-mode-differences.adoc:82
