--- a/l10n/po/ja_JP/_guides/elasticsearch-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/elasticsearch-dev-services.adoc.po
@@ -95,7 +95,7 @@ msgstr "複数の（共有）サーバーが必要な場合は、 `quarkus.elast
 #. type: Plain text
 #: upstream/_guides/elasticsearch-dev-services.adoc:41
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.elasticsearch.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。共有は `quarkus.elasticsearch.devservices.shared=false` で無効にすることができます。"
+msgstr "共有は、開発モードではデフォルトで有効ですが、testモードでは無効です。共有は `quarkus.elasticsearch.devservices.shared=false` で無効にすることができます。"
 
 #. type: Title ==
 #: upstream/_guides/elasticsearch-dev-services.adoc:42
