--- a/l10n/po/ja_JP/_guides/funqy-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-http.adoc.po
@@ -109,7 +109,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/funqy-http.adoc:58
 msgid "This starts your functions in Quarkus dev mode."
-msgstr "これにより、Quarkus devモードで Function が起動されます。"
+msgstr "これにより、Quarkus 開発モードで Function が起動されます。"
 
 #. type: Title ==
 #: upstream/_guides/funqy-http.adoc:59
