--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -1068,7 +1068,7 @@ msgstr ""
 #: upstream/_guides/hibernate-orm.adoc:516
 #, fuzzy
 msgid "You can start dev mode using a custom profile:"
-msgstr "カスタムプロファイルを使用してdevモードを開始することができます。"
+msgstr "カスタムプロファイルを使用して開発モードを開始することができます。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm.adoc:521
