--- a/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-dev-services.adoc.po
@@ -90,7 +90,7 @@ msgstr "複数の（共有）ブローカーが必要な場合は、 `quarkus.ka
 #. type: Plain text
 #: upstream/_guides/kafka-dev-services.adoc:41
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.kafka.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.kafka.devservices.shared=false` で共有を無効に設定可能です。"
+msgstr "共有は、開発モードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.kafka.devservices.shared=false` で共有を無効に設定可能です。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-dev-services.adoc:42
