--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -1248,7 +1248,7 @@ msgstr "他のアプリケーションが使用していないコンシューマ
 #: upstream/_guides/kafka.adoc:630
 #, fuzzy
 msgid "Quarkus generates a UUID that changes between two executions (including in dev mode).  So, you are sure no other consumer uses it, and you receive a new unique group id every time your application starts."
-msgstr "Quarkusは、2つの実行（devモードを含む）の間で変化するUUIDを生成します。そのため、他のコンシューマーが使用していないことが確認でき、アプリケーションが起動するたびに新しい一意のグループIDを受け取ることができます。"
+msgstr "Quarkusは、2つの実行（開発モードを含む）の間で変化するUUIDを生成します。そのため、他のコンシューマーが使用していないことが確認でき、アプリケーションが起動するたびに新しい一意のグループIDを受け取ることができます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:632
