--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-12 10:10+0000\n"
-"PO-Revision-Date: 2022-04-12 11:25+0900\n"
+"PO-Revision-Date: 2022-05-06 11:27+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -178,9 +178,8 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:90
-#, fuzzy
 msgid "This command generates a Maven project, importing the `kogito` extension that comes with all needed dependencies and configuration to equip your application with business automation.  It also imports the `resteasy-reactive-jackson` extension that is needed for Kogito to expose REST services."
-msgstr "このコマンドはMavenプロジェクトを生成し、アプリケーションにビジネス・オートメーションを装備するために必要な依存関係と設定をすべて備えた `kogito` エクステンションをインポートします。また、KogitoがRESTサービスを公開するのに必要な `resteasy-jackson` エクステンションをインポートします。"
+msgstr "このコマンドはMavenプロジェクトを生成し、アプリケーションにビジネス・オートメーションを装備するために必要な依存関係と設定をすべて備えた `kogito` エクステンションをインポートします。また、KogitoがRESTサービスを公開するのに必要な `resteasy-reactive-jackson` エクステンションをインポートします。"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:93
@@ -590,7 +589,7 @@ msgstr "JVMモードでの実行"
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:262
 msgid "To run the microservice in dev mode, use:"
-msgstr "マイクロサービスをdevモードで実行する場合、次を実行して下さい:"
+msgstr "マイクロサービスを開発モードで実行する場合、次を実行して下さい:"
 
 #. type: Title ===
 #: upstream/_guides/kogito.adoc:265
