--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -353,7 +353,7 @@ msgstr "アプリケーションの終了時に呼び出されるメソッド"
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:172
 msgid "The events are also called in _dev mode_ between each redeployment."
-msgstr "また、各再配置の間に _devモード_ でイベントが呼び出されます。"
+msgstr "また、各再配置の間に _開発モード_ でイベントが呼び出されます。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:174
