--- a/l10n/po/ja_JP/_guides/logging.adoc.po
+++ b/l10n/po/ja_JP/_guides/logging.adoc.po
@@ -1141,7 +1141,7 @@ msgstr "このエクステンションが存在すると、デフォルトでは
 #. type: Plain text
 #: upstream/_guides/logging.adoc:288
 msgid "For some, it will make sense to use logging that is humanly readable (unstructured) in dev mode and JSON logging (structured) in production mode. This can be achieved using different profiles, as shown in the following configuration."
-msgstr "いくつかの場合、devモードでは人間が読める(構造化されていない)ロギングを使用し、本番モードではJSONロギング(構造化されている)を使用することが理にかなっているでしょう。これは、以下の設定で示されているように、異なるプロファイルを使用して達成することができます。"
+msgstr "いくつかの場合、開発モードでは人間が読める(構造化されていない)ロギングを使用し、本番モードではJSONロギング(構造化されている)を使用することが理にかなっているでしょう。これは、以下の設定で示されているように、異なるプロファイルを使用して達成することができます。"
 
 #. type: Block title
 #: upstream/_guides/logging.adoc:289
