--- a/l10n/po/ja_JP/_guides/mailer.adoc.po
+++ b/l10n/po/ja_JP/_guides/mailer.adoc.po
@@ -127,7 +127,7 @@ msgstr "Qute - Quarkusのテンプレートエンジン"
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:53
 msgid "Alternatively, this https://code.quarkus.io/?a=quarkus-mailer-getting-started&nc=true&e=resteasy-reactive&e=qute&e=mailer&extension-search=mail[link] pre-configures the application.  Click on \"Generate your application\", download the zip file and unzip it on your file system.  Open the generated project in your IDE.  In a terminal, navigate to the project and start dev mode:"
-msgstr "あるいは、この https://code.quarkus.io/?a=quarkus-mailer-getting-started&nc=true&e=resteasy-reactive&e=qute&e=mailer&extension-search=mail[リンク] からアプリケーションを事前に設定することもできます。\"Generate your application\" をクリックして、ZIPファイルをダウンロードし、お使いのファイルシステムで解凍します。生成されたプロジェクトをお使いのIDEで開きます。ターミナルで、プロジェクトに移動し、devモードを開始します。"
+msgstr "あるいは、この https://code.quarkus.io/?a=quarkus-mailer-getting-started&nc=true&e=resteasy-reactive&e=qute&e=mailer&extension-search=mail[リンク] からアプリケーションを事前に設定することもできます。\"Generate your application\" をクリックして、ZIPファイルをダウンロードし、お使いのファイルシステムで解凍します。生成されたプロジェクトをお使いのIDEで開きます。ターミナルで、プロジェクトに移動し、開発モードを開始します。"
 
 #. type: Title ===
 #: upstream/_guides/mailer.adoc:56
@@ -259,7 +259,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:118
 msgid "As the application runs in _dev mode_, it simulates the sending of the emails.  It prints it in the log, so you can check that what was about to be sent."
-msgstr "このアプリケーションは _devモード_ で動作しているので、メール送信のシミュレーションを行います。それをログに出力するので、何が送信されようとしているのかを確認することができます。"
+msgstr "このアプリケーションは _開発モード_ で動作しているので、メール送信のシミュレーションを行います。それをログに出力するので、何が送信されようとしているのかを確認することができます。"
 
 #. type: Plain text
 #: upstream/_guides/mailer.adoc:121
