--- a/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/maven-tooling.adoc.po
@@ -333,7 +333,7 @@ msgstr "その後、アプリケーションのソース、リソース、およ
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:143
 msgid "Dev mode enables hot deployment with background compilation, which means that when you modify your Java files or your resource files and refresh your browser these changes will automatically take effect.  This works too for resource files like the configuration property file.  The act of refreshing the browser triggers a scan of the workspace, and if any changes are detected the Java files are compiled, and the application is redeployed, then your request is serviced by the redeployed application. If there are any issues with compilation or deployment an error page will let you know."
-msgstr "Devモードでは、バックグラウンド・コンパイルによるホット・デプロイメントが可能です。つまり、Javaファイルやリソース・ファイルを変更してブラウザを更新すると、その変更が自動的に反映されます。これは、Javaファイルやリソースファイルを変更してブラウザを更新すると、その変更が自動的に反映されることを意味します。ブラウザを更新すると、ワークスペースのスキャンが行われ、変更が検出されると、Javaファイルがコンパイルされ、アプリケーションが再デプロイされ、再デプロイされたアプリケーションによってリクエストが処理されます。コンパイルやデプロイに問題があった場合は、エラーページでお知らせします。"
+msgstr "開発モードでは、バックグラウンド・コンパイルによるホット・デプロイメントが可能です。つまり、Javaファイルやリソース・ファイルを変更してブラウザを更新すると、その変更が自動的に反映されます。これは、Javaファイルやリソースファイルを変更してブラウザを更新すると、その変更が自動的に反映されることを意味します。ブラウザを更新すると、ワークスペースのスキャンが行われ、変更が検出されると、Javaファイルがコンパイルされ、アプリケーションが再デプロイされ、再デプロイされたアプリケーションによってリクエストが処理されます。コンパイルやデプロイに問題があった場合は、エラーページでお知らせします。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:145
@@ -383,7 +383,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:175
 msgid "This tells Quarkus to use the mutable-jar format. Mutable applications also include the deployment time parts of Quarkus, so they take up a bit more disk space. If run normally they start just as fast and use the same memory as an immutable application, however they can also be started in dev mode."
-msgstr "これは、QuarkusにMutable-jar形式を使用するように指示します。ミュータブルアプリケーションには、Quarkusのデプロイメント時間の部分も含まれているため、より多くのディスクスペースを占有します。普通に実行した場合は、イミュータブルアプリケーションと同じ速度で起動し、同じメモリーを使用しますが、devモードで起動することもできます。"
+msgstr "これは、QuarkusにMutable-jar形式を使用するように指示します。ミュータブルアプリケーションには、Quarkusのデプロイメント時間の部分も含まれているため、より多くのディスクスペースを占有します。普通に実行した場合は、イミュータブルアプリケーションと同じ速度で起動し、同じメモリーを使用しますが、開発モードで起動することもできます。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:176
@@ -393,7 +393,7 @@ msgstr "リモート側とローカル側の通信を安全に保つためのパ
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:178
 msgid "The URL that your app is going to be running in dev mode at. This is only needed on the local side, so you may want to leave it out of the properties file and specify it as a system property on the command line."
-msgstr "アプリがdevモードで実行されるURL。これはローカル側でのみ必要なので、プロパティー ファイルから除外して、コマンド ラインでシステム プロパティーとして指定するとよいでしょう。"
+msgstr "アプリが開発モードで実行されるURL。これはローカル側でのみ必要なので、プロパティー ファイルから除外して、コマンド ラインでシステム プロパティーとして指定するとよいでしょう。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:180
@@ -1503,7 +1503,7 @@ msgstr "Bootstrap Mavenのプロパティ"
 #: upstream/_guides/maven-tooling.adoc:876
 #, fuzzy
 msgid "Quarkus bootstrap includes a Maven resolver implementation that is used to resolve application runtime and build time dependencies. The Quarkus Maven resolver is initialized from the same Maven command line that launched the build, test or dev mode. Typically, there is no need to add any extra configuration for it. However, there could be cases where an extra configuration option may be necessary to properly resolve application dependencies in test or dev modes, or IDEs."
-msgstr "Quarkusのブートストラップには、アプリケーションのランタイムおよびビルドタイムの依存関係を解決するために使用されるMavenリゾルバの実装が含まれています。QuarkusのMavenリゾルバは、ビルド、テスト、またはdevモードを起動したのと同じMavenコマンドラインから初期化されます。通常は、追加の設定を行う必要はありません。ただし、テストモード、開発モード、またはIDEでアプリケーションの依存関係を適切に解決するために、追加の設定オプションが必要な場合があります。"
+msgstr "Quarkusのブートストラップには、アプリケーションのランタイムおよびビルドタイムの依存関係を解決するために使用されるMavenリゾルバの実装が含まれています。QuarkusのMavenリゾルバは、ビルド、テスト、または開発モードを起動したのと同じMavenコマンドラインから初期化されます。通常は、追加の設定を行う必要はありません。ただし、テストモード、開発モード、またはIDEでアプリケーションの依存関係を適切に解決するために、追加の設定オプションが必要な場合があります。"
 
 #. type: Plain text
 #: upstream/_guides/maven-tooling.adoc:878
