--- a/l10n/po/ja_JP/_guides/redis-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/redis-dev-services.adoc.po
@@ -69,4 +69,4 @@ msgstr "複数の（共有）サーバーが必要な場合は、 `quarkus.redis
 #. type: Plain text
 #: upstream/_guides/redis-dev-services.adoc:38
 msgid "Sharing is enabled by default in dev mode, but disabled in test mode.  You can disable the sharing with `quarkus.redis.devservices.shared=false`."
-msgstr "共有は、devモードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.redis.devservices.shared=false` で共有を無効にすることが可能です。"
+msgstr "共有は、開発モードではデフォルトで有効ですが、testモードでは無効です。 `quarkus.redis.devservices.shared=false` で共有を無効にすることが可能です。"
