--- a/l10n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -449,7 +449,7 @@ msgstr "アプリケーションのテスト"
 #: upstream/_guides/security-jpa.adoc:258
 #, fuzzy
 msgid "You can start the application in dev mode as follows:"
-msgstr "devモードでアプリケーションを起動するには、次のようにします。"
+msgstr "開発モードでアプリケーションを起動するには、次のようにします。"
 
 #. type: delimited block =
 #: upstream/_guides/security-jpa.adoc:264
