--- a/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-keycloak-authorization.adoc.po
@@ -404,7 +404,7 @@ msgstr "Keycloakサーバーの起動と設定"
 #: upstream/_guides/security-keycloak-authorization.adoc:198
 #, fuzzy
 msgid "Do not start the Keycloak server when you run the application in a dev mode - `Dev Services for Keycloak` will launch a container. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr "アプリケーションをdevモードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
+msgstr "アプリケーションを開発モードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:200
@@ -594,7 +594,7 @@ msgstr "アプリケーションのテスト"
 #: upstream/_guides/security-keycloak-authorization.adoc:277
 #, fuzzy
 msgid "See <<keycloak-dev-mode, Running the Application in Dev mode>> section above about testing your application in a dev mode."
-msgstr "Devモードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
+msgstr "開発モードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-keycloak-authorization.adoc:279
@@ -999,7 +999,7 @@ msgstr "xref:security.adoc[Quarkus Security]"
 #~ msgstr "デベロッパーモードでの実行"
 
 #~ msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-#~ msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
+#~ msgstr "マイクロサービスを開発モードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
 
 #~ msgid "See the link:security-openid-connect[Using OpenID Connect to Protect Service Applications] guide for more information about `Bearer Token` authentication mechanism."
 #~ msgstr "`Bearer Token` 認証メカニズムの詳細については、 link:security-openid-connect[Using OpenID Connect to Protect Service Applications]ガイドを参照してください。"
