--- a/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/smallrye-metrics.adoc.po
@@ -306,7 +306,7 @@ msgstr "link:#writing-an-application_{context}[writing-an-application_{context}]
 #: upstream/_guides/smallrye-metrics.adoc:149
 #, fuzzy
 msgid "Run the microservice in dev mode:"
-msgstr "マイクロサービスをdevモードで実行します。"
+msgstr "マイクロサービスを開発モードで実行します。"
 
 #. type: Plain text
 #: upstream/_guides/smallrye-metrics.adoc:154
@@ -497,7 +497,7 @@ msgstr "設定リファレンス"
 #~ msgstr "集めようとしているメトリクスは、以下の通りです："
 
 #~ msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`"
-#~ msgstr "マイクロサービスをdevモードで実行するには、次のようにします。 `./mvnw clean compile quarkus:dev`"
+#~ msgstr "マイクロサービスを開発モードで実行するには、次のようにします。 `./mvnw clean compile quarkus:dev`"
 
 #~ msgid "The application will respond that 629521085409773 is a prime number.  If you want, try some more calls with numbers of your choice."
 #~ msgstr "アプリは629521085409773が素数であることを回答します。お好みで、好きな番号でもう何回か呼び出してみてください。"
