--- a/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-boot-properties.adoc.po
@@ -312,7 +312,7 @@ msgstr "アプリケーションをパッケージ化して実行する"
 #: upstream/_guides/spring-boot-properties.adoc:145
 #, fuzzy
 msgid "Run the application in dev mode with:"
-msgstr "でdevモードでアプリケーションを実行します。"
+msgstr "で開発モードでアプリケーションを実行します。"
 
 #. type: Plain text
 #: upstream/_guides/spring-boot-properties.adoc:149
