--- a/l10n/po/ja_JP/_posts/2019-08-01-hibernate-orm-config-profiles.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-08-01-hibernate-orm-config-profiles.adoc.po
@@ -140,7 +140,7 @@ msgstr "# And now, let's be ready for prod mvn clean package -Pnative -Dquarkus.
 #: upstream/_posts/2019-08-01-hibernate-orm-config-profiles.adoc:76
 #, fuzzy
 msgid "I hope you have found this tip useful.  Hibernate ORM schema update, data fixture, Quarkus dev mode and its configuration profiles are a powerful combination!"
-msgstr "このヒントがお役に立てたのではないでしょうか。Hibernate ORMスキーマ更新、データフィクスチャ、Quarkus devモードとその構成プロファイルは強力な組み合わせです"
+msgstr "このヒントがお役に立てたのではないでしょうか。Hibernate ORMスキーマ更新、データフィクスチャ、Quarkus 開発モードとその構成プロファイルは強力な組み合わせです"
 
 #, fuzzy
 #~ msgid "---\n"
