--- a/l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-09-23-unused-beans.adoc.po
@@ -152,7 +152,7 @@ msgstr "最後に、未使用のインターセプターとデコレーターは
 #. type: Plain text
 #: upstream/_posts/2021-09-23-unused-beans.adoc:62
 msgid "When using the dev mode (e.g. running `./mvnw quarkus:dev`), you can see more information about which beans are being removed in the Dev UI."
-msgstr "devモードを使用している場合（例： `./mvnw quarkus:dev` を実行している場合）、どのBeanが削除されているかの詳細な情報をDev UIで見ることができます。"
+msgstr "開発モードを使用している場合（例： `./mvnw quarkus:dev` を実行している場合）、どのBeanが削除されているかの詳細な情報をDev UIで見ることができます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-09-23-unused-beans.adoc:63
