--- a/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc.po
@@ -39,7 +39,7 @@ msgstr "post"
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:1
 #, no-wrap
 msgid "Quarkus 2.7.0.Final comes with an even better Quarkus CLI, an interactive terminal for dev mode, SmallRye Stork 1.0.0, an Oracle Reactive SQL Client extension and a ton of other things."
-msgstr "Quarkus 2.7.0.Finalには、さらに改良されたQuarkus CLI、devモード用のインタラクティブターミナル、SmallRye Stork 1.0.0、Oracle Reactive SQL Clientエクステンション、その他多くのものが搭載されています。"
+msgstr "Quarkus 2.7.0.Finalには、さらに改良されたQuarkus CLI、開発モード用のインタラクティブターミナル、SmallRye Stork 1.0.0、Oracle Reactive SQL Clientエクステンション、その他多くのものが搭載されています。"
 
 #. type: YAML Front Matter: tags
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:1
@@ -71,7 +71,7 @@ msgstr "Quarkus CLIには多くの改良が加えられ、Homebrew、SDMANに公
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:17
 msgid "An interactive terminal for dev mode"
-msgstr "devモード用のインタラクティブターミナル"
+msgstr "開発モード用のインタラクティブターミナル"
 
 #. type: Plain text
 #: upstream/_posts/2022-02-02-quarkus-2-7-0-final-released.adoc:18
