--- a/l10n/po/ja_JP/_posts/insights_1_transcription.adoc.po
+++ b/l10n/po/ja_JP/_posts/insights_1_transcription.adoc.po
@@ -1298,7 +1298,7 @@ msgstr "デバッグはうまくいく"
 #: upstream/_posts/insights_1_transcription.adoc:428
 #, fuzzy
 msgid "What is a little cumbersome at the moment is dev mode inside the IDE. So with dev mode the easiest way to do it is you do mvn quarkus: dev and then you attach a remote debugger later on."
-msgstr "今のところ少し面倒なのはIDE内のdevモードです。そのため、devモードを使う最も簡単な方法はmvn quarkus: devを実行して、後でリモートデバッガーをアタッチすることです。"
+msgstr "今のところ少し面倒なのはIDE内の開発モードです。そのため、開発モードを使う最も簡単な方法はmvn quarkus: devを実行して、後でリモートデバッガーをアタッチすることです。"
 
 #. type: Plain text
 #: upstream/_posts/insights_1_transcription.adoc:430
