--- a/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
+++ b/l10n/po/ja_JP/_guides/openapi-swaggerui.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-19 17:18+0000\n"
-"PO-Revision-Date: 2022-04-11 15:55+0900\n"
+"PO-Revision-Date: 2022-05-06 11:24+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -87,7 +87,6 @@ msgstr "RESTリソースを公開する"
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:43
-#, fuzzy
 msgid "We will create a `Fruit` bean and a `FruitResource` REST resource (feel free to take a look to the xref:rest-json.adoc[Writing JSON REST services guide] if your want more details on how to build a REST API with Quarkus)."
 msgstr "ここでは、 `Fruit` Beanと `FruitResouce` RESTリソースを作成します（QuarkusでREST APIを構築する方法について詳しく知りたい場合は、 link:rest-json.html[Writing JSON REST servicesガイド]を参照してください）。"
 
@@ -312,9 +311,8 @@ msgstr "Quarkusアプリケーションに `openapi` のエクステンション
 
 #. type: Plain text
 #: upstream/_guides/openapi-swaggerui.adoc:173
-#, fuzzy
 msgid "This will add the following to your build file:"
-msgstr "これにより、 `pom.xml` に以下が追加されます:"
+msgstr "これにより、ビルドファイルに以下が追加されます:"
 
 #. type: Block title
 #: upstream/_guides/openapi-swaggerui.adoc:175
@@ -782,7 +780,7 @@ msgstr "Quarkus `smallrye-openapi` エクステンションには、適切に設
 #. type: delimited block =
 #: upstream/_guides/openapi-swaggerui.adoc:454
 msgid "By default, Swagger UI is only available when Quarkus is started in dev or test mode."
-msgstr "デフォルトでは、Swagger UIは、Quarkusをdevモードまたはtestモードで起動したときにのみ使用できます。"
+msgstr "デフォルトでは、Swagger UIは、Quarkusを開発モードまたはtestモードで起動したときにのみ使用できます。"
 
 #. type: delimited block =
 #: upstream/_guides/openapi-swaggerui.adoc:456
