--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -397,7 +397,7 @@ msgstr "Keycloakサーバーの起動と設定"
 #: upstream/_guides/security-openid-connect.adoc:183
 #, fuzzy
 msgid "Do not start the Keycloak server when you run the application in a dev mode - `Dev Services for Keycloak` will launch a container. See <<keycloak-dev-mode, Running the Application in Dev mode>> section below for more information."
-msgstr "アプリケーションをdevモードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
+msgstr "アプリケーションを開発モードで実行するときは、Keycloakサーバーを起動しないでください - `Dev Services for Keycloak` はコンテナを起動します。詳細については、下記の link:#keycloak-dev-mode[「アプリケーションを開発モードで実行する]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:185
@@ -569,7 +569,7 @@ msgstr "アプリケーションのテスト"
 #: upstream/_guides/security-openid-connect.adoc:260
 #, fuzzy
 msgid "See <<keycloak-dev-mode, Running the Application in Dev mode>> section above about testing your application in a dev mode."
-msgstr "Devモードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
+msgstr "開発モードでのアプリケーションのテストについては、上記の「 link:#keycloak-dev-mode[Running the Application in Dev mode]」セクションを参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:262
@@ -2158,4 +2158,4 @@ msgstr "xref:security.adoc[Quarkus Security]"
 #~ msgstr "デベロッパーモードでの実行"
 
 #~ msgid "To run the microservice in dev mode, use `./mvnw clean compile quarkus:dev`."
-#~ msgstr "マイクロサービスをdevモードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
+#~ msgstr "マイクロサービスを開発モードで実行するには、 `./mvnw clean compile quarkus:dev` を使用します。"
