--- a/l10n/po/ja_JP/_posts/2021-01-18-getting-started-kafka.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-01-18-getting-started-kafka.adoc.po
@@ -468,7 +468,7 @@ msgstr "./mvnw quarkus:dev\n"
 #. type: Plain text
 #: upstream/_posts/2021-01-18-getting-started-kafka.adoc:245
 msgid "The application runs in dev mode, meaning that you can still update the code.  It will reload it automatically."
-msgstr "アプリケーションはdevモードで動作します。つまり、コードをまだ変更することが出来、変更した場合、自動的にリロードされます。"
+msgstr "アプリケーションは開発モードで動作します。つまり、コードをまだ変更することが出来、変更した場合、自動的にリロードされます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-01-18-getting-started-kafka.adoc:247
