Add some translations

--- a/l10n/po/ja_JP/_guides/lifecycle.adoc.po
+++ b/l10n/po/ja_JP/_guides/lifecycle.adoc.po
@@ -7,14 +7,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-04 01:49+0900\n"
-"PO-Revision-Date: 2021-12-01 13:57+0900\n"
+"PO-Revision-Date: 2022-05-06 11:48+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -254,9 +254,8 @@ msgstr "コマンドライン引数は、プロパティ `quarkus.args` で `-D`
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:128
-#, fuzzy
 msgid "For Quarkus dev mode:"
-msgstr "Quarkus開発モードの場合。"
+msgstr "Quarkus開発モードの場合:"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:132
@@ -368,13 +367,11 @@ msgstr "`@Initialized(ApplicationScoped.class)`  との違いは? `@Destroyed(Ap
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:180
-#, fuzzy
 msgid "In the JVM mode, there is no real difference, except that `StartupEvent` is always fired *after* `@Initialized(ApplicationScoped.class)` and `ShutdownEvent` is fired *before* `@Destroyed(ApplicationScoped.class)`.  For a native executable build, however, `@Initialized(ApplicationScoped.class)` is fired as *part of the native build process*, whereas `StartupEvent` is fired when the native image is executed.  See xref:writing-extensions.adoc#bootstrap-three-phases[Three Phases of Bootstrap and Quarkus Philosophy] for more details."
-msgstr "JVMモードでは、 `StartupEvent` が常に `@Initialized(ApplicationScoped.class)` の *後に*起動され、 `ShutdownEvent` が `@Destroyed(ApplicationScoped.class)` の *前に*起動されることを除けば、実質的な違いはありません。しかし、ネイティブの実行形式のビルドでは、 `@Initialized(ApplicationScoped.class)` は *ネイティブのビルドプロセスの一部*として起動され、 `StartupEvent` はネイティブイメージが実行されるときに起動されます。詳細は、「 link:writing-extensions.html#bootstrap-three-phases[Bootstrapの3つのフェーズ」と「Quarkus Philosophy]」を参照してください。"
+msgstr "JVMモードでは、 `StartupEvent` が常に `@Initialized(ApplicationScoped.class)` の *後に* 起動され、 `ShutdownEvent` が `@Destroyed(ApplicationScoped.class)` の *前に* 起動されることを除けば、実質的な違いはありません。しかし、ネイティブの実行形式のビルドでは、 `@Initialized(ApplicationScoped.class)` は *ネイティブのビルドプロセスの一部* として起動され、 `StartupEvent` はネイティブイメージが実行されるときに起動されます。詳細は、link:writing-extensions.html#bootstrap-three-phases[Bootstrapの3つのフェーズとQuarkus Philosophy] を参照してください。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:182
-#, fuzzy
 msgid "In CDI applications, an event with qualifier `@Initialized(ApplicationScoped.class)` is fired when the application context is initialized. See https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html#application_context[the spec, window=\"_blank\"] for more info."
 msgstr "CDIアプリケーションでは、アプリケーションコンテキストが初期化されたときに、Qualifier `@Initialized(ApplicationScoped.class)` のイベントが発生します。詳しくは link:https://jakarta.ee/specifications/cdi/2.0/cdi-spec-2.0.html#application_context[仕様書, window=_blank]をご覧ください。"
 
@@ -452,33 +449,28 @@ msgstr "アプリケーションをパッケージ化して実行する"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:215
-#, fuzzy
 msgid "Run the application with:"
-msgstr "アプリケーションをパッケージ化して実行する"
+msgstr "アプリケーションを次のように実行します:"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:220
-#, fuzzy
 msgid "The logged message is printed.  When the application is stopped, the second log message is printed."
 msgstr "ログメッセージが表示されます。アプリケーションが停止すると、2つ目のログメッセージが印刷されます。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:222
-#, fuzzy
 msgid "As usual, the application can be packaged using:"
-msgstr "いつものように、アプリケーションは以下の方法でパッケージ化されます。"
+msgstr "いつものように、アプリケーションは以下の方法でパッケージ化できます:"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:226
-#, fuzzy
 msgid "and executed using `java -jar target/quarkus-app/quarkus-run.jar`."
-msgstr "runner jarの場合: `java -Dquarkus.args=<cmd-args> -jar target/quarkus-app/quarkus-run.jar`"
+msgstr "そして次のように実行します `java -jar target/quarkus-app/quarkus-run.jar` 。"
 
 #. type: Plain text
 #: upstream/_guides/lifecycle.adoc:228
-#, fuzzy
 msgid "You can also generate the native executable using:"
-msgstr "を使ってネイティブ実行可能ファイルを生成することもできます。"
+msgstr "次のようにネイティブ実行可能ファイルを生成することもできます:"
 
 #. type: Title ==
 #: upstream/_guides/lifecycle.adoc:231
