--- a/l10n/po/ja_JP/_guides/software-transactional-memory.adoc.po
+++ b/l10n/po/ja_JP/_guides/software-transactional-memory.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-09 21:10+0000\n"
-"PO-Revision-Date: 2022-02-04 14:44+0900\n"
+"PO-Revision-Date: 2022-05-06 11:44+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -95,9 +95,8 @@ msgstr "設定"
 
 #. type: Plain text
 #: upstream/_guides/software-transactional-memory.adoc:90
-#, fuzzy
 msgid "To use the extension include it as a dependency in your build file:"
-msgstr "このエクステンションを使用するには、アプリケーションの依存関係として以下を pom にインクルードしてください。"
+msgstr "このエクステンションを使用するには、アプリケーションの依存関係として以下をビルドファイルにインクルードしてください:"
 
 #. type: Block title
 #: upstream/_guides/software-transactional-memory.adoc:92
@@ -107,21 +106,17 @@ msgstr "pom.xml"
 
 #. type: delimited block -
 #: upstream/_guides/software-transactional-memory.adoc:98
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "<dependency>\n"
 "    <groupId>io.quarkus</groupId>\n"
 "    <artifactId>quarkus-narayana-stm</artifactId>\n"
 "</dependency>\n"
 msgstr ""
-"<dependencies>\n"
-"    <!-- STM extension -->\n"
-"    <dependency>\n"
-"      <groupId>io.quarkus</groupId>\n"
-"      <artifactId>quarkus-narayana-stm</artifactId>\n"
-"      <version>${quarkus.version}</version>\n"
-"    </dependency>\n"
-"</dependencies>\n"
+"<dependency>\n"
+"    <groupId>io.quarkus</groupId>\n"
+"    <artifactId>quarkus-narayana-stm</artifactId>\n"
+"</dependency>\n"
 
 #. type: Block title
 #: upstream/_guides/software-transactional-memory.adoc:101
