--- a/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
+++ b/l10n/po/ja_JP/_guides/topic/continuum.adoc.po
@@ -7,26 +7,26 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-04-29 21:25+0900\n"
-"PO-Revision-Date: 2021-06-15 12:12+0900\n"
+"PO-Revision-Date: 2022-05-06 11:42+0900\n"
 "Last-Translator: Hiroshi Yamanaka <hyamanak@redhat.com>\n"
 "Language-Team: \n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #. type: YAML Front Matter: layout
 #: upstream/_guides/topic/continuum.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "vision"
 msgstr "ビジョン"
 
 #. type: YAML Front Matter: permalink
 #: upstream/_guides/topic/continuum.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "/vision/continuum"
-msgstr "/ビジョン/コンティニュアム"
+msgstr "/vision/continuum"
 
 #. type: Title =
 #: upstream/_guides/topic/continuum.adoc:7
@@ -331,7 +331,7 @@ msgstr "メソッドアクションは、スレッドをブロックすること
 msgid "Thanks to a reactive core, an intuitive event-driven development model and a \"reactive-first\" strategy for all the Quarkus internals, Quarkus applications handles high concurrency, and uses resources efficiently."
 msgstr "リアクティブコア、直感的なイベント駆動型開発モデル、Quarkus 内部のすべての「リアクティブファースト」戦略により、Quarkus アプリケーションは高度な並列処理を行い、リソースを効率的に使用します。"
 
-#.  TODO Async rest client, but does not seem to be working.
+#. TODO Async rest client, but does not seem to be working.
 #. type: Plain text
 #: upstream/_guides/topic/continuum.adoc:159
 msgid "But, what about streams? Generating a _server-sent event_ response with Quarkus is just as simple:"
