--- a/l10n/po/ja_JP/_guides/security-jpa.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-jpa.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-09 21:10+0000\n"
-"PO-Revision-Date: 2022-04-12 11:22+0900\n"
+"PO-Revision-Date: 2022-05-06 11:44+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -447,9 +447,8 @@ msgstr "アプリケーションのテスト"
 
 #. type: Plain text
 #: upstream/_guides/security-jpa.adoc:258
-#, fuzzy
 msgid "You can start the application in dev mode as follows:"
-msgstr "開発モードでアプリケーションを起動するには、次のようにします。"
+msgstr "開発モードでアプリケーションを起動するには、次のようにします:"
 
 #. type: delimited block =
 #: upstream/_guides/security-jpa.adoc:264
